# satysfi-actuarial

./: README.md  Satyristes  satysfi-actuarial-doc.opam  satysfi-actuarial.opam
doc/: bib.satyh  manual.saty
src/: actuarial.satyh
